# sax-wasm

./: .editorconfig  .eslintrc.js  .gitignore  .mocharc.js  .nycrc  .travis.yml  Cargo.toml  ENCODING_SPEC.md  LICENSE  README.md  eslint.config.mjs  jest.config.js  package-lock.json  package.json  rollup.config.js  rustfmt.toml  tsconfig.json
.cargo/: config  config.toml
.github/workflows/: ci.yaml  rust.yml
lib/: index.d.ts  index.js  index.js.map  sax-wasm.js  sax-wasm.wasm  saxWasm.d.ts  saxWasm.js  saxWasm.js.map
lib/cjs/: index.d.ts  index.js  index.js.map  package.json  saxWasm.d.ts  saxWasm.js  saxWasm.js.map
lib/esm/: index.d.ts  index.js  index.js.map  package.json  saxWasm.d.ts  saxWasm.js  saxWasm.js.map
lib/module/: index.js  saxWasm.d.ts
lib/types/: saxWasm.d.ts
lib/umd/: index.js  saxWasm.d.ts
scripts/: run-wasm-opt.js
src/: lib.rs  main.js  main.rs  playground.js  sax_wasm.rs
src/js/: index.ts  saxWasm.ts
src/js/__test__/: angular-template.spec.ts  attribute.spec.js  attribute.spec.ts  benchmark.js  benchmark.mjs  benchmarks.ts  cdada.spec.js  cdada.spec.ts  comment.spec.ts  doctype.spec.ts  index.html  jsx.spec.js  jsx.spec.ts  largeXML.spec.js  largeXML.spec.ts  procInst.spec.js  procInst.spec.ts  tag.spec.js  tag.spec.ts  text.spec.js  text.spec.ts  xml.xml
src/sax/: entities.rs  grapheme_iterator.rs  json_utils.rs  mod.rs  names.rs  parser.rs  sax_wasm.rs  tag.rs  utils.rs
